[package]
name = "tostr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
futures-util = "0.3.21"
log = "0.4.17"
secp256k1 = {version = "0.23.3", features = ["rand", "rand-std", "bitcoin_hashes"]}
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread", "time"]}
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
url = "2.2.2"
